fix the width of the image on firefox

--- a/src/style/components/itemToShow.scss
+++ b/src/style/components/itemToShow.scss
@@ -29,3 +29,9 @@
     align-self: center;
   }
 }
+
+@-moz-document url-prefix() {
+  .image {
+    width: auto;
+  }
+}
